// Vitest Snapshot v1

exports[`generateRouteRecord > adds children and name when folder and component exist 1`] = `
"[
  {
    path: '/a',
    name: '/a',
    component: () => import('a.vue'),
    children: [
      {
        path: 'c',
        name: '/a/c',
        component: () => import('a/c.vue'),
        /* no children */
      }
    ],
  },
  {
    path: '/b',
    /* no name */
    /* no component */
    children: [
      {
        path: 'c',
        name: '/b/c',
        component: () => import('b/c.vue'),
        /* no children */
      }
    ],
  },
  {
    path: '/d',
    name: '/d',
    component: () => import('d.vue'),
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > correctly names index.vue files 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no children */
  },
  {
    path: '/b',
    /* no name */
    /* no component */
    children: [
      {
        path: '',
        name: '/b/',
        component: () => import('b/index.vue'),
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > handles multiple named views 1`] = `
"[
  {
    path: '/foo',
    name: '/foo',
    components: {
      'default': () => import('foo.vue'),
      'a': () => import('foo@a.vue'),
      'b': () => import('foo@b.vue')
    },
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > handles non nested routes 1`] = `
"[
  {
    path: '/users',
    name: '/users',
    component: () => import('users.vue'),
    children: [
      {
        path: '',
        name: '/users/',
        component: () => import('users/index.vue'),
        /* no children */
      },
      {
        path: ':id',
        name: '/users/[id]',
        component: () => import('users/[id].vue'),
        children: [
          {
            path: '',
            name: '/users/[id]/',
            component: () => import('users/[id]/index.vue'),
            /* no children */
          },
          {
            path: 'other',
            name: '/users/[id]/other',
            component: () => import('users/[id]/other.vue'),
            /* no children */
          }
        ],
      },
      {
        path: ':id/not-nested',
        name: '/users/[id].not-nested',
        component: () => import('users/[id].not-nested.vue'),
        /* no children */
      },
      {
        path: 'other',
        name: '/users/other',
        component: () => import('users/other.vue'),
        /* no children */
      }
    ],
  },
  {
    path: '/users/:id/also-not-nested',
    name: '/users.[id].also-not-nested',
    component: () => import('users.[id].also-not-nested.vue'),
    /* no children */
  },
  {
    path: '/users/not-nested',
    name: '/users.not-nested',
    component: () => import('users.not-nested.vue'),
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > handles single named views 1`] = `
"[
  {
    path: '/foo',
    name: '/foo',
    components: {
      'a': () => import('foo@a.vue')
    },
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > names > creates multi word names 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no children */
  },
  {
    path: '/my-users',
    name: '/my-users',
    component: () => import('my-users.vue'),
    /* no children */
  },
  {
    path: '/MyPascalCaseUsers',
    name: '/MyPascalCaseUsers',
    component: () => import('MyPascalCaseUsers.vue'),
    /* no children */
  },
  {
    path: '/some-nested',
    /* no name */
    /* no component */
    children: [
      {
        path: 'file-with-:id-in-the-middle',
        name: '/some-nested/file-with-[id]-in-the-middle',
        component: () => import('some-nested/file-with-[id]-in-the-middle.vue'),
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > names > creates single word names 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no children */
  },
  {
    path: '/about',
    name: '/about',
    component: () => import('about.vue'),
    /* no children */
  },
  {
    path: '/users',
    /* no name */
    /* no component */
    children: [
      {
        path: '',
        name: '/users/',
        component: () => import('users/index.vue'),
        /* no children */
      },
      {
        path: ':id',
        name: '/users/[id]',
        component: () => import('users/[id].vue'),
        children: [
          {
            path: 'edit',
            name: '/users/[id]/edit',
            component: () => import('users/[id]/edit.vue'),
            /* no children */
          }
        ],
      },
      {
        path: 'new',
        name: '/users/new',
        component: () => import('users/new.vue'),
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > names > works with nested views 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no children */
  },
  {
    path: '/users',
    name: '/users',
    component: () => import('users.vue'),
    children: [
      {
        path: '',
        name: '/users/',
        component: () => import('users/index.vue'),
        /* no children */
      },
      {
        path: ':id',
        name: '/users/[id]',
        component: () => import('users/[id].vue'),
        children: [
          {
            path: 'edit',
            name: '/users/[id]/edit',
            component: () => import('users/[id]/edit.vue'),
            /* no children */
          }
        ],
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > nested children 1`] = `
"[
  {
    path: '/a',
    /* no name */
    /* no component */
    children: [
      {
        path: 'a',
        name: '/a/a',
        component: () => import('a/a.vue'),
        /* no children */
      },
      {
        path: 'b',
        name: '/a/b',
        component: () => import('a/b.vue'),
        /* no children */
      },
      {
        path: 'c',
        name: '/a/c',
        component: () => import('a/c.vue'),
        /* no children */
      }
    ],
  },
  {
    path: '/b',
    /* no name */
    /* no component */
    children: [
      {
        path: 'b',
        name: '/b/b',
        component: () => import('b/b.vue'),
        /* no children */
      },
      {
        path: 'c',
        name: '/b/c',
        component: () => import('b/c.vue'),
        /* no children */
      },
      {
        path: 'd',
        name: '/b/d',
        component: () => import('b/d.vue'),
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > nested children 2`] = `
"[
  {
    path: '/a',
    /* no name */
    /* no component */
    children: [
      {
        path: 'a',
        name: '/a/a',
        component: () => import('a/a.vue'),
        /* no children */
      },
      {
        path: 'b',
        name: '/a/b',
        component: () => import('a/b.vue'),
        /* no children */
      },
      {
        path: 'c',
        name: '/a/c',
        component: () => import('a/c.vue'),
        /* no children */
      }
    ],
  },
  {
    path: '/b',
    /* no name */
    /* no component */
    children: [
      {
        path: 'b',
        name: '/b/b',
        component: () => import('b/b.vue'),
        /* no children */
      },
      {
        path: 'c',
        name: '/b/c',
        component: () => import('b/c.vue'),
        /* no children */
      },
      {
        path: 'd',
        name: '/b/d',
        component: () => import('b/d.vue'),
        /* no children */
      }
    ],
  },
  {
    path: '/c',
    name: '/c',
    component: () => import('c.vue'),
    /* no children */
  },
  {
    path: '/d',
    name: '/d',
    component: () => import('d.vue'),
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > works with some paths at root 1`] = `
"[
  {
    path: '/a',
    name: '/a',
    component: () => import('a.vue'),
    /* no children */
  },
  {
    path: '/b',
    name: '/b',
    component: () => import('b.vue'),
    /* no children */
  },
  {
    path: '/c',
    name: '/c',
    component: () => import('c.vue'),
    /* no children */
  }
]"
`;
